Host PT fonts instead of using Google Web Fonts.
pages/fonts/{ptsans, ptserif} contain the whole distributions
from http://paratype.com/public/, but we use only a few of them
in assets/css/pt-fonts.css.

--- a/assets.yml
+++ b/assets.yml
@@ -2,12 +2,13 @@
 - name: libs-css
   files:
     - assets/css/bootstrap.min.css
-    - assets/css/font-awesome.min.css
     - assets/css/social-likes_birman.css
+    - assets/css/font-awesome.min.css
   outname: $
 
 - name: site-css
   files:
+    - assets/css/pt-fonts.css
     - assets/css/site.css
   filter: cssmin
   outname: $
