Don't use Google Hosted Libraries for jQuery.
We can host it ourselves.

--- a/assets.yml
+++ b/assets.yml
@@ -21,6 +21,7 @@
 
 - name: libs-js
   files:
+    - assets/js/jquery.min.js
     - assets/js/bootstrap.min.js
     - assets/js/social-likes.min.js
   separator: "\n"
