Update nginx config.
- Replace old Tor address with the new one.
- Fix HTTP redirection to include request URI.

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,20 +1,20 @@
 server {
 	listen 	80;
-	server_name	sellme.ru;
+	server_name	sellme.ru sellme.biz;
 	server_tokens	off;
 
 	# Redirect sellme.ru to sellme.biz.
 	if ($http_user_agent ~* (FeedBurner|YandexBot|bingbot)) {
-		return 301 http://sellme.biz;
+		return 301 http://sellme.biz$request_uri;
 	}
-	return 301 https://sellme.biz;
+	return 301 https://sellme.biz$request_uri;
 }
 
 server {
 	listen		80;
 	listen		443 ssl;
 	listen          8333; # Tor hidden service is bound to this port.
-	server_name	sellme.biz sellme3uwy224etv.onion sellme.dev;
+	server_name	sellme.biz sellmefmabkgispl.onion sellme.dev;
 	server_tokens	off;
 	root            /var/www/sellme.biz;
 
