Nginx: redirect www to non-www (clunky).

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -35,6 +35,11 @@ server {
 	ssl_prefer_server_ciphers	on;
 	ssl_session_cache		shared:SSL:50m;
 
+	# Redirect www to non-www.
+	if ($host ~* ^www\.){
+		rewrite ^(.*)$ $scheme://sellme.biz$1;
+	}
+
 	#
 	# RSS Feed: redirect to FeedBurner.
 	#
