Fix more old links.

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -131,20 +131,24 @@ server {
 
 	# Sellme ran on multiple CMS since 2005. We'd like to keep links working.
 
-	# WordPress
-	#
-	# Links were in the form of /YYYY/MM/DD/post_name/
-	#
-	# To get the current scheme, we remove day, append .html and replace
-	# underscore with dashes: /YYYY/MM/post-name.html
-	#
-	rewrite "^/([0-9]{4})/([0-9]{2})/([0-9]{2})/([^/]+)/?$"	/$1/$2/$4.html	permanent;
-	# replace underscores with dashes (it will continue replacing until all done):
-	rewrite "^/([0-9]{4})/([0-9]{2})/(.*)\_(.*)$" 		/$1/$2/$3-$4	permanent;
-	# upload
-	rewrite ^/wp-content/uploads/(.*)$	/pics/$1	permanent;
+        # WordPress
+        #
+        # Links were in the form of /YYYY/MM/DD/post_name/
+        #
+        # To get the current scheme, we remove day, append .html and replace
+        # underscore with dashes: /YYYY/MM/post-name.html
+        # But first we try .html.
+        rewrite "^/([0-9]{4})/([0-9]{2})/([0-9]{2})/([^/]+)\.html$"     /$1/$2/$4.html  permanent;
+        rewrite "^/([0-9]{4})/([0-9]{2})/([0-9]{2})/([^/]+)/?$" /$1/$2/$4.html  permanent;
+        # replace underscores with dashes (it will continue replacing until all done):
+        rewrite "^/([0-9]{4})/([0-9]{2})/(.*)\_(.*)$"           /$1/$2/$3-$4    permanent;
+        # upload
+        rewrite ^/wp-content/uploads/(.*)$      /pics/$1        permanent;
 
-	# Webby
+        # Old
+        rewrite ^/old/(.*)$     /$1 permanent;
+
+        # Webby
 	#
 	# Published only a few articles with Webby, redirect them.
 	#
