Fix redirect loop in nginx.conf.

--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,6 +1,6 @@
 server {
 	listen 	80;
-	server_name	sellme.ru sellme.biz;
+	server_name	sellme.ru;
 	server_tokens	off;
 
 	# Redirect sellme.ru to sellme.biz.
