Lots of fixes for old posts, mostly broken links.

--- a/site.yml
+++ b/site.yml
@@ -9,6 +9,7 @@ filters:
 
 properties:
   tagline: "блог о бизнесе и маркетинге своими силами"
+  onion: http://sellmefmabkgispl.onion
   like_title: "Sellme.biz"
   twitter_name: sellmebiz
   urls:
