--- a/assets.yml
+++ b/assets.yml
@@ -25,4 +25,18 @@
     - assets/js/bootstrap.min.js
     - assets/js/social-likes.min.js
   separator: "\n"
-  outname: /assets/libs.:hash.js
+  outname: $
+
+- name: site-js
+  files:
+    - assets/js/site.js
+    - assets/js/google-analytics.js
+  filter: jsmin
+  outname: $
+
+- name: global-js
+  files:
+    - $libs-js
+    - $site-js
+  separator: "\n"
+  outname: /assets/global.:hash.js
