Load Google Analytics by inserting <script>.
Looks like CSP doesn't prevent us from adding <script src=...> elements
with the srcs we allow.

Do not load Analytics on .onion domains.

--- a/assets.yml
+++ b/assets.yml
@@ -19,9 +19,8 @@
     - $site-css
   outname: /assets/global.:hash.css
 
-- name: global-js
+- name: analytics-js
   files:
     - assets/js/google-analytics.js
   separator: "\n"
-  filter: jsmin
-  outname: /assets/global.:hash.js
+  outname: /assets/analytics.:hash.js
