Update PT fonts
Use PT Sans and PT Serif downloaded from Google Fonts, which include
WOFF2 format, and smaller other formats, plus CSS now allows using
locally installed fonts.

--- a/assets.yml
+++ b/assets.yml
@@ -4,11 +4,12 @@
     - assets/css/bootstrap.min.css
     - assets/css/font-awesome.min.css
     - assets/css/hint.min.css
+    - assets/css/ptsans.css
+    - assets/css/ptserif.css
   outname: $
 
 - name: site-css
   files:
-    - assets/css/pt-fonts.css
     - assets/css/site.css
   filter: cssmin
   outname: $
