--- a/config/nginx/sellme.biz.conf
+++ b/config/nginx/sellme.biz.conf
@@ -4,7 +4,7 @@
 
 # Redirect all HTTP to https://sellme.biz
 server {
-    listen 80;
+    listen [::]:80;
     server_name sellme.biz www.sellme.biz;
 		server_tokens	off;
 		access_log	off;
@@ -13,7 +13,7 @@ server {
 }
 
 server {
-	listen		443 ssl;
+	listen		[::]:443 ssl;
 	server_name	sellme.biz www.sellme.biz;
 	server_tokens	off;
 	root            /var/www/sellme.biz;
