Oops, forgot to also listen on IP4

--- a/config/nginx/sellme.biz.conf
+++ b/config/nginx/sellme.biz.conf
@@ -4,6 +4,7 @@
 
 # Redirect all HTTP to https://sellme.biz
 server {
+    listen 80;
     listen [::]:80;
     server_name sellme.biz www.sellme.biz;
 		server_tokens	off;
@@ -13,6 +14,7 @@ server {
 }
 
 server {
+	listen		443 ssl;
 	listen		[::]:443 ssl;
 	server_name	sellme.biz www.sellme.biz;
 	server_tokens	off;
