Get rid of Google Analytics. Don't track people

--- a/config/nginx/sellme.biz.conf
+++ b/config/nginx/sellme.biz.conf
@@ -43,8 +43,8 @@ server {
 	# Add HSTS header.
 	add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
 
-	# Allow scripts only from self and Google Analytics.
-	add_header Content-Security-Policy "script-src 'self' www.google-analytics.com";
+	# Allow scripts only from self.
+	add_header Content-Security-Policy "script-src 'none'";
 
 	# Disable framing from other origins.
 	add_header X-Frame-Options "SAMEORIGIN";
@@ -134,7 +134,7 @@ server {
 	location ~* \.(?:ico|gif|jpe?g|png)$ {
 		expires	   30d;
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
-		add_header Content-Security-Policy "script-src 'self' www.google-analytics.com";
+		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
 		add_header Cache-Control public;
 	}
@@ -143,7 +143,7 @@ server {
 	location ~* \.(?:xml|txt|html|htm)$ {
 		expires	   1h;
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
-		add_header Content-Security-Policy "script-src 'self' www.google-analytics.com";
+		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
 		add_header Cache-Control public;
 	}
@@ -152,7 +152,7 @@ server {
 	location /assets {
 		expires    max;
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
-		add_header Content-Security-Policy "script-src 'self' www.google-analytics.com";
+		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
 		add_header Cache-Control public;
 	}
@@ -160,17 +160,9 @@ server {
 	location /fonts {
 		expires    max;
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
-		add_header Content-Security-Policy "script-src 'self' www.google-analytics.com";
+		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
 		add_header Cache-Control public;
-	}
-
-	# Redirect to Google Analytics.
-	location /maybe-google-analytics.js {
-		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
-		add_header Content-Security-Policy "script-src 'self' www.google-analytics.com";
-		add_header X-Frame-Options "SAMEORIGIN";
-		return 301 https://www.google-analytics.com/analytics.js;
 	}
 
 	#
