nginx: enable gzip

--- a/config/nginx/sellme.onion.conf
+++ b/config/nginx/sellme.onion.conf
@@ -50,7 +50,9 @@ server {
 	#
 
 	# Enable gzip compression
-	# XXX must be enabled by default
+	gzip on;
+	gzip_types text/plain text/xml text/css application/x-javascript application/javascript;
+	gzip_vary on;
 
 	# Images expire in 30 days.
 	location ~* \.(?:ico|gif|jpe?g|png)$ {
