--- a/config/nginx/sellme.biz.conf
+++ b/config/nginx/sellme.biz.conf
@@ -33,7 +33,7 @@ server {
 	ssl_dhparam			/etc/nginx/ssl/oakley-group-14.pem;
 	ssl_session_timeout		5m;
 	ssl_protocols 			TLSv1 TLSv1.1 TLSv1.2;
-	ssl_ciphers			'ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-DSS-AES128-GCM-SHA256:kEDH+AESGCM:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA:ECDHE-ECDSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-DSS-AES128-SHA256:DHE-RSA-AES256-SHA256:DHE-DSS-AES256-SHA:DHE-RSA-AES256-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA:AES256-SHA:AES:CAMELLIA:DES-CBC3-SHA:!aNULL:!eNULL:!EXPORT:!DES:!RC4:!MD5:!PSK:!aECDH:!EDH-DSS-DES-CBC3-SHA:!EDH-RSA-DES-CBC3-SHA:!KRB5-DES-CBC3-SHA';
+	ssl_ciphers			 'ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256:ECDHE-ECDSA-AES128-SHA:ECDHE-RSA-AES256-SHA384:ECDHE-RSA-AES128-SHA:ECDHE-ECDSA-AES256-SHA384:ECDHE-ECDSA-AES256-SHA:ECDHE-RSA-AES256-SHA:DHE-RSA-AES128-SHA256:DHE-RSA-AES128-SHA:DHE-RSA-AES256-SHA256:DHE-RSA-AES256-SHA:ECDHE-ECDSA-DES-CBC3-SHA:ECDHE-RSA-DES-CBC3-SHA:EDH-RSA-DES-CBC3-SHA:AES128-GCM-SHA256:AES256-GCM-SHA384:AES128-SHA256:AES256-SHA256:AES128-SHA:AES256-SHA:DES-CBC3-SHA:!DSS';
 	ssl_prefer_server_ciphers	on;
 	ssl_session_cache		shared:SSL:50m;
 
@@ -48,6 +48,12 @@ server {
 
 	# Disable framing from other origins.
 	add_header X-Frame-Options "SAMEORIGIN";
+
+    # Enable XSS protection.
+    add_header X-XSS-Protection "1; mode=block";
+
+    # Disable content-type sniffing.
+    add_header X-Content-Type-Options "nosniff";
 
 	# Redirect www to non-www.
 	if ($host ~* ^www\.){
@@ -138,7 +144,9 @@ server {
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
 		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
-		add_header Cache-Control public;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+        add_header Cache-Control public;
 	}
 
 	# Pages expire in 1 hour.
@@ -147,6 +155,8 @@ server {
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
 		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
 		add_header Cache-Control public;
 	}
 
@@ -156,7 +166,9 @@ server {
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
 		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
-		add_header Cache-Control public;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+        add_header Cache-Control public;
 	}
 
 	location /fonts {
@@ -164,7 +176,9 @@ server {
 		add_header Strict-Transport-Security "max-age=15768000; includeSubDomains; preload"; # 6 month
 		add_header Content-Security-Policy "script-src 'none'";
 		add_header X-Frame-Options "SAMEORIGIN";
-		add_header Cache-Control public;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header X-Content-Type-Options "nosniff";
+        add_header Cache-Control public;
 	}
 
 	#
