--- a/config/nginx/sellme.biz.conf
+++ b/config/nginx/sellme.biz.conf
@@ -28,8 +28,8 @@ server {
 	# at https://wiki.mozilla.org/Security/Server_Side_TLS#Nginx
 	# (except for OCSP Stapling).
 	#
-	ssl_certificate			/etc/nginx/ssl/sellme.biz.crt;
-	ssl_certificate_key		/etc/nginx/ssl/sellme.biz.key;
+	ssl_certificate			/etc/letsencrypt/live/sellme.biz/fullchain.pem;
+	ssl_certificate_key		/etc/letsencrypt/live/sellme.biz/privkey.pem;
 	ssl_dhparam			/etc/nginx/ssl/oakley-group-14.pem;
 	ssl_session_timeout		5m;
 	ssl_protocols 			TLSv1 TLSv1.1 TLSv1.2;
