--- a/config/nginx/sellme.biz.conf
+++ b/config/nginx/sellme.biz.conf
@@ -181,6 +181,11 @@ server {
         add_header Cache-Control public;
 	}
 
+    # For Let's Encrypt
+    location ~ /.well-known {
+        allow all;
+    }
+
 	#
 	# Cool URIs Don't Change.
 	# (But when they change, we redirect.)
