--- a/assets.yml
+++ b/assets.yml
@@ -1,6 +1,7 @@
 ---
 - name: global-css
   files:
+    - assets/css/CharisSILCyr.css
     - assets/css/site.css
   filter: cssmin
   outname: /assets/global.:hash.css
